# dcip

./: .gitignore  README.md  pyproject.toml
dcip/: __init__.py  admin.py  apps.py  conf.py  db_router.py  models.py  urls.py  views.py
dcip/management/commands/: download_server_ip_db.py  generate_server_ip_db.py  merge_server_ip.py  upload_server_ip_db.py
dcip/templates/dcip/: base.html  check.html
